[gd_scene load_steps=7 format=3 uid="uid://cary6bfxcv6kp"]

[ext_resource type="Texture2D" uid="uid://ftdpuvrvkl7" path="res://Sprites/Shapes/RoundedSquare.png" id="1_6i8ll"]
[ext_resource type="Script" path="res://Scenes/Level/tile_object.gd" id="1_122we"]
[ext_resource type="Texture2D" uid="uid://b6vbbmesx1r76" path="res://Sprites/Shapes/Square.png" id="3_75n5h"]
[ext_resource type="Texture2D" uid="uid://cxjf3lhk2r2li" path="res://Sprites/Shapes/Circle.png" id="3_lkbe0"]

[sub_resource type="LabelSettings" id="LabelSettings_18drw"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_sdmjb"]
font_size = 24

[node name="TileObject" type="Control"]
z_index = -1
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 95.0
offset_bottom = 95.0
scale = Vector2(1.5, 1.5)
script = ExtResource("1_122we")

[node name="Tile" type="TextureRect" parent="."]
clip_children = 1
texture_filter = 5
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.742188, 0.742188)
texture = ExtResource("1_6i8ll")

[node name="Blank" type="TextureRect" parent="Tile"]
self_modulate = Color(0.490196, 0.490196, 0.490196, 1)
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("3_75n5h")
expand_mode = 2

[node name="CardImage" type="TextureRect" parent="Tile"]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 5
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("3_75n5h")
expand_mode = 2

[node name="Attack2" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0.929412, 0.815686, 0, 1)
texture_filter = 5
layout_mode = 1
offset_left = -3.0
offset_top = 78.0
offset_right = 125.0
offset_bottom = 206.0
scale = Vector2(0.203125, 0.206349)
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_lkbe0")

[node name="AttackText" type="Label" parent="Attack2"]
clip_contents = true
layout_mode = 1
offset_right = 123.0
offset_bottom = 126.0
text = "6"
label_settings = SubResource("LabelSettings_18drw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health2" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 0.286275, 0, 1)
texture_filter = 5
layout_mode = 1
offset_left = 73.0
offset_top = 78.0
offset_right = 201.0
offset_bottom = 206.0
scale = Vector2(0.203125, 0.206349)
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_lkbe0")

[node name="HealthText" type="Label" parent="Health2"]
clip_contents = true
layout_mode = 1
offset_right = 128.0
offset_bottom = 126.0
text = "9"
label_settings = SubResource("LabelSettings_18drw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="."]
visible = false
clip_contents = true
layout_mode = 1
offset_left = -16.0
offset_top = 104.0
offset_right = 240.0
offset_bottom = 197.0
scale = Vector2(0.5, 0.5)
label_settings = SubResource("LabelSettings_sdmjb")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
